--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,3 +1,7 @@
+#chartdiv {
+  min-height: 400px;
+}
+
 .app {
   margin: 0 auto;
   height: 100%;
@@ -9,25 +13,28 @@
   text-align: center;
   width: 100%;
   background:
-    -webkit-linear-gradient(bottom,  #111 0%, rgba(0,0,0,.5) 99%),
-    -webkit-linear-gradient(left,  rgba(204,0,0,0) 0%, rgba(204,0,0,0.5) 20%, rgba(204,0,0,0) 100%),
-    -webkit-linear-gradient(top, rgba(0,0,0,.5) 0%, rgba(0,0,0,.2) 100%),
-    rgba(0,230,223,.6);
+    -webkit-linear-gradient(bottom,  rgba(0,0,0,0) 0%, rgba(0,0,0,.5) 99%),
+    /* -webkit-linear-gradient(left,  rgba(204,0,0,0) 0%, rgba(204,0,0,0.5) 20%, rgba(204,0,0,0) 100%), */
+    /* -webkit-linear-gradient(top, rgba(0,0,0,.5) 0%, rgba(0,0,0,.2) 100%), */
+    /* rgba(0,230,223,.6); */
+    #1E5799;
 
   background:
-    -webkit-gradient(linear,  left bottom, left top,  from(#111), color-stop(99%, rgba(0,0,0,.5))),
-    -webkit-gradient(linear,  left top, right top,  from(rgba(204,0,0,0)), color-stop(20%, rgba(204,0,0,0.5)), to(rgba(204,0,0,0))),
-    -webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,.5)), to(rgba(0,0,0,.2))),
-    rgba(0,230,223,.6);
+    -webkit-gradient(linear,  bottom, top,  from(rgba(0,0,0,0)), color-stop(99%, rgba(0,0,0,.5))),
+    /* -webkit-gradient(linear,  left top, right top,  from(rgba(204,0,0,0)), color-stop(20%, rgba(204,0,0,0.5)), to(rgba(204,0,0,0))), */
+    /* -webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,.5)), to(rgba(0,0,0,.2))), */
+    /* rgba(0,230,223,.6); */
+    #1E5799;
 
   background:
-    linear-gradient(to top,  #111 0%, #00000080 99%),
-    linear-gradient(to right,  rgba(204,0,0,0) 0%, rgba(204,0,0,0.5) 20%, rgba(204,0,0,0) 100%),
-    linear-gradient(to bottom, rgba(0,0,0,.5) 0%, rgba(0,0,0,.2) 100%),
-    rgba(0,230,223,.6);
+    linear-gradient(to top,  rgba(0,0,0,0) 0%, #00000080 99%),
+    /* linear-gradient(to right,  rgba(204,0,0,0) 0%, rgba(204,0,0,0.5) 20%, rgba(204,0,0,0) 100%), */
+    /* linear-gradient(to bottom, rgba(0,0,0,.5) 0%, rgba(0,0,0,.2) 100%); */
+    /* rgba(0,230,223,.6); */
+    #1E5799;
 
   box-sizing: border-box;
-  border-bottom: 3px solid #cc0000;
+  border-bottom: 3px solid #6AAEF0;
 
 }
 
@@ -35,7 +42,7 @@
   width: 90%;
   margin: 35px auto 0;
   display: grid;
-  grid-template-columns: 20% 25% 55%;
+  grid-template-columns: 30% 70%;
   grid-template-rows: 100%;
   grid-column-gap: 10px;
   grid-row-gap: 10px;
@@ -63,19 +70,18 @@
   font-style: italic;
   text-transform: uppercase;
   font-size: calc(12px + 2vw);
-  text-shadow: 0 0 10px rgba(204,0,0,1);
+  text-shadow: 0 0 10px rgba(19,41,64,.5);
   text-decoration: none;
   box-sizing: border-box;
-  position: relative;
-  top: -5px;
-  left: auto;
-  z-index: 1001;
+  /* position: relative; */
+  /* top: -5px; */
+  /* left: auto; */
+  /* z-index: 1001; */
 }
 .app-hdr__name:hover {
   text-shadow: 
-    0 0 20px rgba(204,0,0,1),
-    0 0 10px rgba(204,0,0,1),
-    0 0 5px rgba(204,0,0,1);
+    0 0 20px rgba(106,174,240,.5),
+    0 0 5px rgba(106,174,240,.5);
 }
 
 .app-hdr__links {
@@ -120,10 +126,13 @@
 
 .app-hdr__links:hover {
   background-position: 100% 100%;
+  color: #fff;
+  text-decoration: none;
 }
 
 .app-body {
   box-sizing: border-box;
+  background: #f5f5f5;
 }
 
 
@@ -153,34 +162,10 @@
   .app-hdr {
     padding-top: 20px; 
     padding-bottom: 20px;
-    /*border-bottom: 3px solid purple;*/
 
-    background:
-      -webkit-linear-gradient(bottom, #111 0%, rgba(0,0,0,.4) 100%),
-      -webkit-linear-gradient(left, rgba(204,0,0,0) 0%, rgba(204,0,0,0.5) 50%, rgba(204,0,0,0) 100%),
-      -webkit-linear-gradient(top,rgba(0,0,0,.4) 0%, rgba(0,0,0,.2) 100%),
-      rgba(0,230,223,.4);
-
-    background:
-      -webkit-gradient(linear, left bottom, left top, from(#111), to(rgba(0,0,0,.4))),
-      -webkit-gradient(linear, left top, right top, from(rgba(204,0,0,0)), color-stop(50%, rgba(204,0,0,0.5)), to(rgba(204,0,0,0))),
-      -webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,.4)), to(rgba(0,0,0,.2))),
-      rgba(0,230,223,.4);
-
-    background:
-      -webkit-linear-gradient(bottom, #111 0%, rgba(0,0,0,.4) 100%),
-      -webkit-linear-gradient(left, rgba(204,0,0,0) 0%, rgba(204,0,0,0.5) 50%, rgba(204,0,0,0) 100%),
-      -webkit-linear-gradient(top, rgba(0,0,0,.4) 0%, rgba(0,0,0,.2) 100%),
-      rgba(0,230,223,.4);
-
-    background:
-      linear-gradient(to top, #111 0%, rgba(0,0,0,.4) 100%),
-      linear-gradient(to right, rgba(204,0,0,0) 0%, rgba(204,0,0,0.5) 50%, rgba(204,0,0,0) 100%),
-      linear-gradient(to bottom, rgba(0,0,0,.4) 0%, rgba(0,0,0,.2) 100%),
-      rgba(0,230,223,.4);
   }
 
-  .app-hdr__grid.mobile {
+  .app-hdr__grid {
     display: block;
     margin-top: calc(5px + 1vmin);
     width: 100%;
