--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,8 +1,9 @@
 .footer {
-  position: relative;
   box-sizing: border-box;
-  z-index: 0;
-  background: #f5f5f5;
+  height: 100px;
+  text-align: center;
+  padding: 2vmax;
+  border-top: 1px solid #ccc;
 }
 
 
